# fastapi-image

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/fastapi_image/: __init__.py  main.py
tests/: test_main.py
